--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
-        "alpinejs": "^2.7.3",
-        "autoprefixer": "^9.8.6",
+        "@tailwindcss/postcss7-compat": "^2.0.2",
+        "alpinejs": "^2.8.0",
         "axios": "^0.19",
-        "cross-env": "^7.0",
+        "cross-env": "^7.0.3",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-tailwind": "^0.1.1",
         "lodash": "^4.17.19",
+        "postcss": "^7.0.35",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/typography": "^0.3.1"
     }
 }
